# libxvnc

./: Makefile.am  configure.ac  vncExt.c  xvnc.pc.in
include/X11/extensions/: Xvnc.h
man/: Makefile.am  XVncExt.man  XVncExtFreeParamList.man  XVncExtGetClientCutText.man
src/: Makefile.am  vncExt.c
